--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
+# ---- Web Framework ----
 flask==3.0.0
 flask-cors==4.0.0
-transformers==4.35.0
-torch==2.1.0
-sentence-transformers==2.2.2
-PyPDF2==3.0.1
-python-docx==1.1.0
-pandas==2.1.3
-numpy==1.24.3
 gunicorn==21.2.0
 streamlit==1.28.0
-pandas==2.0.3
-plotly==5.17.0
-google-generativeai==0.3.2
-scikit-learn==1.3.0
+
+# ---- Data Processing ----
+pandas==2.1.3
 numpy==1.24.3
-python-dotenv>=1.0.0
+scikit-learn==1.3.0
+scipy==1.11.3
+
+# ---- AI / Google API ----
+google-generativeai==0.3.2
+python-dotenv==1.0.0
+
+# ---- Visualization ----
+plotly==5.17.0
+
+# ---- Document Processing ----
+PyPDF2==3.0.1
+python-docx==1.1.0
+
+# ---- Optional (small util libs) ----
+requests==2.31.0
+regex==2023.10.3
