--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ gunicorn==21.2.0
 streamlit==1.28.0
 
 # ---- Data Processing ----
-pandas==2.1.3
-numpy==1.24.3
+pandas==2.2.3
+numpy==1.26.4
 scikit-learn==1.3.0
 scipy==1.11.3
 
@@ -21,6 +21,6 @@ plotly==5.17.0
 PyPDF2==3.0.1
 python-docx==1.1.0
 
-# ---- Optional (small util libs) ----
+# ---- Utility Libraries ----
 requests==2.31.0
 regex==2023.10.3
